<resources>
    <string name="app_name">EnzoneMockup</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action1">Icon/Action1</string>
    <string name="action2">Icon/Action2</string>
    <string name="action3">Icon/Action3</string>
    <string name="action4">Icon/Action4</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>
