<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_cached_green_600_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@+id/action1" android:title="@string/action1"
        app:showAsAction="always" />
    <item android:id="@+id/action2" android:title="@string/action2"
        app:showAsAction="always" />
    <item android:id="@+id/action3" android:title="@string/action3"
        app:showAsAction="always" />
    <item android:id="@+id/action4" android:title="@string/action4"
        app:showAsAction="always" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
